--- a/SocialNetwork.Web/Views/Profile/Create.cshtml
+++ b/SocialNetwork.Web/Views/Profile/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Perfil</h2>
+<h2>Crie o seu perfil</h2>
 
 
 @using (Html.BeginForm("Create", "Profile", FormMethod.Post, new {enctype = "multipart/form-data"}))
@@ -12,8 +12,6 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Nome do usuário</h4>
-        <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.FirstName, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -48,15 +46,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Criar perfil" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
