--- a/SocialNetwork.Web/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork.Web/Views/Shared/_Layout.cshtml
@@ -30,12 +30,10 @@
                                 @Html.AntiForgeryToken()
                                 <div class="login-form">
                                     <span>
-                                        <label for="username">Username</label>
-                                        <input required type="text" name="username" />
+                                        <input required type="text" placeholder="Username" name="username" />
                                     </span>
                                     <span>
-                                        <label for="password">Senha</label>
-                                        <input required type="text" name="password" />
+                                        <input required type="password" placeholder="Password" name="password" />
                                     </span>
                                     <input type="submit" value="Log In" class="btn btn-default" />
                                 </div>
@@ -77,7 +75,7 @@
         @RenderBody()
         <footer>
             <hr />
-            <p>&copy; @DateTime.Now.Year - Destrava.com</p>
+            <p>&copy; @DateTime.Now.Year - Connect Sport.com</p>
         </footer>
     </div>
 
