--- a/SocialNetwork.Web/Views/Shared/_Layout.cshtml
+++ b/SocialNetwork.Web/Views/Shared/_Layout.cshtml
@@ -74,8 +74,9 @@
     <div class="container body-content">
         @RenderBody()
         <footer>
-            <hr />
-            <p>&copy; @DateTime.Now.Year - Connect Sport.com</p>
+            <div class="container">
+                <p>&copy; @DateTime.Now.Year - Connect Sport.com</p>
+            </div>
         </footer>
     </div>
 
