--- a/SocialNetwork.Web/Content/Site.css
+++ b/SocialNetwork.Web/Content/Site.css
@@ -28,6 +28,16 @@ textarea {
     max-width: 280px;
 }
 
+input.sign-up-btn 
+{
+    background: #0078f1;
+    border: none;
+    color:#fff;
+    height:30px;
+    width:100%;
+    border-radius:3px;
+}
+
 main.user-details
 {
     display:flex;
