--- a/SocialNetwork.Web/Views/Account/Register.cshtml
+++ b/SocialNetwork.Web/Views/Account/Register.cshtml
@@ -36,8 +36,8 @@
             </div>
         </div>
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Registrar" class="btn btn-default" />
+            <div class="col-md-10">
+                <input type="submit" value="Inscrever-se" class="sign-up-btn" />
             </div>
         </div>
     </div>
