--- a/SocialNetwork.Web/Views/Account/Login.cshtml
+++ b/SocialNetwork.Web/Views/Account/Login.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Login";
 }
 
-<h2>Login</h2>
-
-
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
 
+    <img src="/celular-image.jpg" />
+
+    <div class="form-horizontal">
+        <h2>Login</h2>
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
             @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "control-label col-md-2" })
