--- a/SocialNetwork.Web/Views/Posts/Create.cshtml
+++ b/SocialNetwork.Web/Views/Posts/Create.cshtml
@@ -54,7 +54,7 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-md-2">Título</label>
+            <label class="control-label col-md-2">Velocidade máxima</label>
             <div class="col-md-10">
                 @Html.EditorFor(model => model.AverageSpeed, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.AverageSpeed, "", new { @class = "text-danger" })
